[package]
name = "image2"
version = "1.7.1"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
license = "ISC"
keywords = ["image", "image-processing"]
repository = "https://github.com/zshipko/image2-rs"
documentation = "https://docs.rs/image2"
description = "A simple image processing library"
readme = "README.md"
edition = "2021"
links = "OpenImageIO"

[dependencies]
half = "2"
thiserror = "1"
euclid = "0.22"
cpp = {version = "0.5", optional = true}
rayon = {version = "1", optional = true}
serde = {version = "1", optional = true, features = ["derive"]}
rusttype = {version = "0.9", optional = true}
halide-runtime = {version = "0.6", optional = true}
glfw = {version = "0.45", optional = true, default-features=false}
gl = {version = "0.14", optional = true}

[build-dependencies]
cpp_build = {version = "0.5", optional = true}

[dev-dependencies]
smol = "1"

[features]
default = ["oiio", "parallel", "text"]
window = ["gl", "glfw"]
oiio = ["cpp", "cpp_build"]
oiio-custom = ["cpp", "cpp_build"]
parallel = ["rayon"]
halide = ["halide-runtime"]
serialize = ["serde", "euclid/serde"]
text = ["rusttype"]
glfw-sys = ["glfw/glfw-sys"]
magick = []

[package.metadata.docs.rs]
no-default-features = true
features = ["window", "parallel", "halide", "serialize"]

[[example]]
name = "window"
required-features = ["window"]
