[package]
name = "image2"
version = "1.10.0"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
license = "ISC"
keywords = ["image", "image-processing"]
repository = "https://github.com/zshipko/image2-rs"
documentation = "https://docs.rs/image2"
description = "A simple image processing library"
readme = "README.md"
edition = "2021"
links = "OpenImageIO"

[dependencies]
half = "2"
thiserror = "1"
euclid = "0.22"
blockhash = {version = "0.5", default-features=false}
memmap2 = {version = "0.5", optional = true}
cpp = {version = "0.5", optional = true}
rayon = {version = "1", optional = true}
serde = {version = "1", optional = true, features = ["derive"]}
rusttype = {version = "0.9", optional = true}
glfw = {version = "0.51", optional = true, default-features=false}
glow = {version = "0.12", optional = true}

[build-dependencies]
cpp_build = {version = "0.5", optional = true}

[dev-dependencies]
smol = "1"

[features]
default = ["oiio", "parallel", "text", "mmap"]
oiio = ["cpp", "cpp_build"]
oiio-custom = ["cpp", "cpp_build"]
parallel = ["rayon"]
serialize = ["serde", "euclid/serde"]
text = ["rusttype"]
glfw-sys = ["glfw/glfw-sys"]
magick = []
opengl = ["glow"]
mmap = ["memmap2"]
imagemagick7 = ["magick"]

[package.metadata.docs.rs]
no-default-features = true
features = ["parallel", "serialize", "mmap", "text"]

